examples/test/testpolicy3318.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3318
  namespace: namespace426
spec:
  podSelector:
    matchLabels:
      key7: value2
      key0: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value27
          key42: value25
      podSelector:
        matchLabels:
          key29: value21
          key39: value16
